fixed alignment of add-to-outfit button

--- a/public/_carousel.scss
+++ b/public/_carousel.scss
@@ -1,3 +1,7 @@
+.menu-wrapper--inner {
+  display: flex;
+}
+
 .menu-item {
   height: 500px;
   width: 250px;
